Implement friend feature into UI